--- a/IndividualContributions.html
+++ b/IndividualContributions.html
@@ -305,7 +305,7 @@
         </script>
          <div class="container">
                 <ul class="pagination .pagination-lg justify-content-center">
-                  <li class="page-item"><a class="page-link" href="Index.md">Home</a></li>
+                  <li class="page-item"><a class="page-link" href="Index.html">Home</a></li>
                 </ul>
         </div>
         <p align="center">Most changes were submitted on a monday, and during the 7th hour of the day.</p>
