--- a/ChangesByDayAndHour.html
+++ b/ChangesByDayAndHour.html
@@ -230,6 +230,6 @@
                 <li class="page-item"><a class="page-link" href="IndividualContributions.html">Next</a></li>
             </ul>
         </div>
-        <p align="center">Most 'changes' were submitted on a monday, and during the 7th hour of the day.</p>
+        <p style="margin-left:20px;">Most 'changes' were submitted on a monday, and during the 7th hour of the day.</p>
     </body>
 </html>
