--- a/IndividualContributions.html
+++ b/IndividualContributions.html
@@ -304,7 +304,7 @@
          <div class="container">
                 <ul class="pagination .pagination-lg justify-content-center">
                   <li class="page-item"><a class="page-link" href="ChangesByDayAndHour.html">Previous</a></li>
-                  <li class="page-item"><a class="page-link" href="Index.html">Home</a></li>
+                  <li class="page-item"><a class="page-link" href="https://anujagawande.github.io/Gerrit-changes-vis/">Home</a></li>
                 </ul>
         </div>
         <p style="margin-left:20px;">This chart breaks down the changes by project within the NDN Gerrit repository. Names have been replaced with ID's provided by Gerrit for every individual. Individual with ID #1 contributed 488 'changes' overall. In NFD, #21 contributed 176 'changes'. In #28 contributed 117 'changes'. In ndn-cxx, #1 contributed 429 'changes'.</p>
