--- a/ChangesByDayAndHour.html
+++ b/ChangesByDayAndHour.html
@@ -226,7 +226,7 @@
         <br>
         <div class="container">
             <ul class="pagination .pagination-lg justify-content-center">
-                <li class="page-item"><a class="page-link" href="Index.html">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="https://anujagawande.github.io/Gerrit-changes-vis/">Previous</a></li>
                 <li class="page-item"><a class="page-link" href="IndividualContributions.html">Next</a></li>
             </ul>
         </div>
